name:              emp-pl-site
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Forms
                     Handler.Common
                     Handler.Home
                     Handler.Ratings
                     Import
                     Import.NoFoundation
                     Model
                     Model.CountryCodes
                     Settings
                     Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fdefer-typed-holes
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fdefer-typed-holes

    extensions: DeriveDataTypeable
                DeriveGeneric
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns
    build-depends: aeson
                 , base
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , country-codes
                 , data-default
                 , directory
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , http-conduit
                 , hjsmin
                 , monad-control
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , random
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form

executable         emp-pl-site
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, emp-pl-site

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       Handler.HomeSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall -fdefer-typed-holes

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

  build-depends:   aeson
                 , base
                 , classy-prelude
                 , classy-prelude-yesod
                 , emp-pl-site
                 , file-embed
                 , hspec
                 , hspec-webdriver
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , shakespeare
                 , transformers
                 , warp
                 , warp-tls
                 , webdriver
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-test
